<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnrollPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorWhite"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title_register"
                android:textSize="30sp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_register_user_name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:hint="@string/tips_account"
                    android:singleLine="true"
                    android:background="#ffffff"
                    android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
<<<<<<< HEAD
                android:orientation="vertical" >
=======
                android:orientation="horizontal" >
>>>>>>> 204e6777f6b3b7729775baecf2e35dabaffea01c
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="6dp"
                    android:singleLine="true"
                    android:hint="@string/tips_No1psw"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:background="#ffffff"
                    android:id="@+id/et_psw"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="6dp"
                    android:singleLine="true"
                    android:hint="@string/tips_No2psw"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:background="#ffffff"
                    android:id="@+id/et_psw_again"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingLeft="6dp"
                    android:text="性别:"
                    android:textSize="18sp" />

                <RadioGroup
<<<<<<< HEAD
                    android:id="@+id/rg_sex"
=======
                    android:id="@+id/SexRadio"
>>>>>>> 204e6777f6b3b7729775baecf2e35dabaffea01c
                    android:layout_marginLeft="5dp"
                    android:layout_width="278dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp">

                    <RadioButton
                        android:id="@+id/mainRegisterRdBtnMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="男" />

                    <RadioButton
                        android:id="@+id/mainRegisterRdBtnFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="女" />

                </RadioGroup>
<<<<<<< HEAD

                <!--<EditText-->
                    <!--android:id="@+id/et_pswFindQue"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="设置一个密保问题"/>-->
                <!--<EditText-->
                    <!--android:id="@+id/et_pswAnswerFind"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="设置答案(用于找回密码)"/>-->
=======
>>>>>>> 204e6777f6b3b7729775baecf2e35dabaffea01c
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:background="@color/loginBlue"
                android:text="注册"
                android:textSize="24sp" />
        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>